--- a/demo/src/main/resources/fr/projet_ap/Validation.fxml
+++ b/demo/src/main/resources/fr/projet_ap/Validation.fxml
@@ -119,7 +119,7 @@
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-      <Label layoutX="117.0" layoutY="334.0" text="Autres Frais" textFill="#3f6bab">
+      <Label layoutX="122.0" layoutY="334.0" text="Autres Frais" textFill="#3f6bab">
          <font>
             <Font name="Times New Roman Bold Italic" size="12.0" />
          </font>
@@ -140,8 +140,8 @@
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-      <Button layoutX="87.0" layoutY="476.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="134.0" text="Valider" />
-      <Button layoutX="102.0" layoutY="521.0" mnemonicParsing="false" onAction="#RetourClient" text="Revenir en arrière" />
+      <Button layoutX="85.0" layoutY="493.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="134.0" text="Valider" />
+      <Button layoutX="17.0" layoutY="560.0" mnemonicParsing="false" onAction="#RetourClient" text="Revenir en arrière" />
       <Button layoutX="74.0" layoutY="108.0" mnemonicParsing="false" onAction="#Generer_ff" prefHeight="30.0" prefWidth="148.0" text="Générer Fiche de frais">
          <font>
             <Font name="Times New Roman" size="12.0" />
@@ -177,15 +177,15 @@
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font></Label>
-      <Label fx:id="AutreDate1" layoutX="1.0" layoutY="371.0" prefHeight="26.0" prefWidth="62.0" />
-      <Label fx:id="AutreLibelle1" layoutX="64.0" layoutY="371.0" prefHeight="26.0" prefWidth="94.0" />
-      <Label fx:id="AutreMontant1" layoutX="158.0" layoutY="372.0" prefHeight="26.0" prefWidth="72.0" />
-      <Label fx:id="AutreDate2" layoutX="1.0" layoutY="398.0" prefHeight="26.0" prefWidth="62.0" />
-      <Label fx:id="AutreLibelle2" layoutX="64.0" layoutY="398.0" prefHeight="26.0" prefWidth="94.0" />
-      <Label fx:id="AutreMontant2" layoutX="158.0" layoutY="398.0" prefHeight="26.0" prefWidth="72.0" />
-      <Label fx:id="AutreDate3" layoutX="1.0" layoutY="424.0" prefHeight="26.0" prefWidth="62.0" />
-      <Label fx:id="AutreLibelle3" layoutX="64.0" layoutY="424.0" prefHeight="26.0" prefWidth="94.0" />
-      <Label fx:id="AutreMontant3" layoutX="158.0" layoutY="424.0" prefHeight="26.0" prefWidth="72.0" />
+      <Label fx:id="AutreDate1" alignment="CENTER" layoutX="1.0" layoutY="371.0" prefHeight="26.0" prefWidth="62.0" />
+      <Label fx:id="AutreLibelle1" alignment="CENTER" layoutX="64.0" layoutY="371.0" prefHeight="26.0" prefWidth="94.0" />
+      <Label fx:id="AutreMontant1" alignment="CENTER" layoutX="158.0" layoutY="372.0" prefHeight="26.0" prefWidth="72.0" />
+      <Label fx:id="AutreDate2" alignment="CENTER" layoutX="1.0" layoutY="398.0" prefHeight="26.0" prefWidth="62.0" />
+      <Label fx:id="AutreLibelle2" alignment="CENTER" layoutX="64.0" layoutY="398.0" prefHeight="26.0" prefWidth="94.0" />
+      <Label fx:id="AutreMontant2" alignment="CENTER" layoutX="158.0" layoutY="398.0" prefHeight="26.0" prefWidth="72.0" />
+      <Label fx:id="AutreDate3" alignment="CENTER" layoutX="1.0" layoutY="424.0" prefHeight="26.0" prefWidth="62.0" />
+      <Label fx:id="AutreLibelle3" alignment="CENTER" layoutX="64.0" layoutY="424.0" prefHeight="26.0" prefWidth="94.0" />
+      <Label fx:id="AutreMontant3" alignment="CENTER" layoutX="158.0" layoutY="424.0" prefHeight="26.0" prefWidth="72.0" />
       <Separator layoutY="423.0" prefHeight="3.0" prefWidth="299.0" />
       <Separator layoutY="397.0" prefHeight="3.0" prefWidth="299.0" />
       <Separator layoutX="1.0" layoutY="449.0" prefHeight="3.0" prefWidth="299.0" />
@@ -194,9 +194,9 @@
       <Separator layoutX="62.0" layoutY="373.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
       <Separator layoutX="156.0" layoutY="373.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
       <Separator layoutX="229.0" layoutY="373.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
-      <CheckBox fx:id="CheckKm1" layoutX="258.0" layoutY="428.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="17.0" />
-      <CheckBox fx:id="CheckKm2" layoutX="258.0" layoutY="402.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="17.0" />
-      <CheckBox fx:id="CheckKm3" layoutX="258.0" layoutY="376.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="17.0" />
+      <CheckBox fx:id="CheckAf3" layoutX="258.0" layoutY="428.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="17.0" />
+      <CheckBox fx:id="CheckAf2" layoutX="258.0" layoutY="402.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="17.0" />
+      <CheckBox fx:id="CheckAf1" layoutX="258.0" layoutY="376.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="17.0" />
       <Label layoutX="243.0" layoutY="354.0" prefHeight="18.0" prefWidth="62.0" text="Validation" />
       <Label layoutX="74.0" layoutY="152.0" prefHeight="18.0" prefWidth="148.0" text="Consultation de la fiche de:">
          <font>
@@ -215,6 +215,17 @@
          </font>
       </Label>
       <Label fx:id="Mois" layoutX="149.0" layoutY="196.0" prefHeight="18.0" prefWidth="87.0">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font>
+      </Label>
+      <Button layoutX="158.0" layoutY="460.0" mnemonicParsing="false" onAction="#Generer_af" prefHeight="25.0" prefWidth="134.0" text="Recharger autres frais" />
+      <Label layoutX="145.0" layoutY="551.0" prefHeight="17.0" prefWidth="148.0" text="Connecté(e) en tant que:">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font>
+      </Label>
+      <Label fx:id="idConnexion" alignment="CENTER" layoutX="161.0" layoutY="571.0" prefHeight="17.0" prefWidth="116.0">
          <font>
             <Font name="System Bold Italic" size="12.0" />
          </font>
