--- a/demo/src/main/resources/fr/projet_ap/Validation.fxml
+++ b/demo/src/main/resources/fr/projet_ap/Validation.fxml
@@ -36,6 +36,8 @@
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -53,7 +55,7 @@
             <Font name="Times New Roman Bold" size="12.0" />
          </font>
       </Label>
-      <TextField fx:id="Matricule" layoutX="94.0" layoutY="59.0" prefHeight="25.0" prefWidth="134.0" promptText="Ex: NRD/106-04" />
+      <TextField fx:id="Matricule" layoutX="94.0" layoutY="59.0" prefHeight="25.0" prefWidth="134.0" promptText="Ex: 123456" />
       <Label layoutX="30.0" layoutY="63.0" text="Matricule :">
          <font>
             <Font name="Times New Roman" size="14.0" />
@@ -140,7 +142,7 @@
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-      <Button layoutX="85.0" layoutY="493.0" mnemonicParsing="false" onAction="#valider" prefHeight="35.0" prefWidth="134.0" text="Valider" />
+      <Button layoutX="163.0" layoutY="172.0" mnemonicParsing="false" onAction="#valider" prefHeight="35.0" prefWidth="134.0" text="Valider" />
       <Button layoutX="17.0" layoutY="560.0" mnemonicParsing="false" onAction="#RetourClient" text="Revenir en arrière" />
       <Button layoutX="74.0" layoutY="108.0" mnemonicParsing="false" onAction="#Generer_ff" prefHeight="30.0" prefWidth="148.0" text="Générer Fiche de frais">
          <font>
@@ -230,5 +232,13 @@
             <Font name="System Bold Italic" size="12.0" />
          </font>
       </Label>
+      <TableView fx:id="AF" editable="true" layoutX="-1.0" layoutY="449.0" prefHeight="99.0" prefWidth="299.0">
+        <columns>
+          <TableColumn fx:id="Af_Date" prefWidth="75.0" text="Date" />
+          <TableColumn fx:id="Af_libelle" prefWidth="75.0" text="Libelle" />
+            <TableColumn fx:id="Af_montant" prefWidth="75.0" text="Montant" />
+            <TableColumn fx:id="Af_Validation" prefWidth="75.0" text="Validation" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
