--- a/demo/src/main/resources/fr/projet_ap/Renseignement.fxml
+++ b/demo/src/main/resources/fr/projet_ap/Renseignement.fxml
@@ -3,6 +3,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -15,99 +17,92 @@
             <Font name="Times New Roman Bold Italic" size="12.0" />
          </font>
       </Label>
-      <Label layoutX="100.0" layoutY="146.0" prefHeight="14.0" prefWidth="44.0" text="Quantité">
+      <Label layoutX="96.0" layoutY="144.0" prefHeight="17.0" prefWidth="44.0" text="Quantité">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
       <Separator layoutX="-2.0" layoutY="163.0" prefHeight="3.0" prefWidth="299.0" />
       <Separator layoutX="-2.0" layoutY="141.0" prefHeight="3.0" prefWidth="299.0" />
-      <Label layoutX="154.0" layoutY="146.0" text="Montant unitaire">
+      <Label layoutX="146.0" layoutY="144.0" prefHeight="17.0" prefWidth="80.0" text="Montant unitaire">
          <font>
-            <Font name="Times New Roman" size="12.0" />
+            <Font name="Times New Roman" size="11.0" />
          </font>
       </Label>
-      <Label layoutX="253.0" layoutY="146.0" prefHeight="14.0" prefWidth="36.0" text="Total">
+      <Label layoutX="246.0" layoutY="144.0" prefHeight="17.0" prefWidth="32.0" text="Total">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
       <Separator layoutX="97.0" layoutY="163.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
       <Separator layoutX="145.0" layoutY="163.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
-      <Separator layoutX="213.0" layoutY="163.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="14.0" />
+      <Separator layoutX="217.0" layoutY="163.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
       <Separator layoutX="-2.0" layoutY="188.0" prefHeight="3.0" prefWidth="299.0" />
       <Separator layoutX="-1.0" layoutY="214.0" prefHeight="3.0" prefWidth="299.0" />
       <Separator layoutX="-2.0" layoutY="237.0" prefHeight="3.0" prefWidth="299.0" />
-      <Label layoutX="34.0" layoutY="168.0" text="Nuitée">
+      <Label layoutX="34.0" layoutY="170.0" text="Nuitée">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-      <Label layoutX="23.0" layoutY="193.0" text="Repas Midi">
+      <Label layoutX="23.0" layoutY="195.0" text="Repas Midi">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-      <Label layoutX="20.0" layoutY="219.0" text="Kilometrage">
+      <Label layoutX="20.0" layoutY="220.0" text="Kilometrage">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-      <Label fx:id="muNuitee" layoutX="153.0" layoutY="167.0" prefHeight="17.0" prefWidth="41.0">
+      <Label fx:id="muNuitee" alignment="CENTER_RIGHT" layoutX="157.0" layoutY="168.0" prefHeight="17.0" prefWidth="44.0">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-      <Label fx:id="muRepas" layoutX="153.0" layoutY="192.0" prefHeight="17.0" prefWidth="41.0">
+      <Label fx:id="muRepas" alignment="CENTER_RIGHT" layoutX="157.0" layoutY="193.0" prefHeight="17.0" prefWidth="44.0">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-      <TextField fx:id="nbrNuitee" layoutX="96.0" layoutY="163.0" onKeyPressed="#calculerTTN" prefHeight="25.0" prefWidth="53.0" promptText="00" />
-      <TextField fx:id="nbrRepas" layoutX="96.0" layoutY="188.0" onKeyPressed="#calculerTTR" prefHeight="25.0" prefWidth="53.0" promptText="00" />
-      <TextField fx:id="nbrKilo" layoutX="96.0" layoutY="213.0" onKeyPressed="#calculerTTK" onMouseDragExited="#calculerTTK" prefHeight="25.0" prefWidth="53.0" promptText="00" />
+      <TextField fx:id="nbrNuitee" alignment="CENTER" layoutX="93.0" layoutY="163.0" onKeyPressed="#calculerTTN" prefHeight="25.0" prefWidth="53.0" promptText="00" />
+      <TextField fx:id="nbrRepas" alignment="CENTER" layoutX="93.0" layoutY="188.0" onKeyPressed="#calculerTTR" prefHeight="25.0" prefWidth="53.0" promptText="00" />
+      <TextField fx:id="nbrKilo" alignment="CENTER" layoutX="93.0" layoutY="213.0" onKeyPressed="#calculerTTK" onMouseDragExited="#calculerTTK" prefHeight="25.0" prefWidth="53.0" promptText="00" />
       <Label layoutX="117.0" layoutY="259.0" text="Autres Frais :" textFill="#3f6bab">
          <font>
             <Font name="Times New Roman Bold Italic" size="12.0" />
          </font>
       </Label>
-      <Label layoutX="38.0" layoutY="298.0" text="Date">
+      <Label layoutX="21.0" layoutY="299.0" text="Date">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
       <Separator layoutX="-1.0" layoutY="295.0" prefHeight="3.0" prefWidth="299.0" />
-      <Label layoutX="134.0" layoutY="298.0" text="Libellé">
+      <Label layoutX="132.0" layoutY="299.0" text="Libellé">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-      <Label layoutX="234.0" layoutY="298.0" text="Montant">
+      <Label layoutX="244.0" layoutY="298.0" text="Montant">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-      <Separator layoutX="-2.0" layoutY="341.0" prefHeight="3.0" prefWidth="299.0" />
-      <TextField fx:id="dateaf1" layoutX="-2.0" layoutY="316.0" prefHeight="25.0" prefWidth="101.0" promptText="jj/mm" />
-      <TextField fx:id="libelleaf1" layoutX="96.0" layoutY="316.0" prefHeight="25.0" prefWidth="113.0" />
-      <TextField fx:id="montantaf1" layoutX="205.0" layoutY="316.0" prefHeight="26.0" prefWidth="94.0" />
-      <TextField fx:id="dateaf2" layoutX="-1.0" layoutY="341.0" prefHeight="25.0" prefWidth="101.0" promptText="jj/mm" />
-      <TextField fx:id="dateaf3" layoutX="-3.0" layoutY="366.0" prefHeight="25.0" prefWidth="101.0" promptText="jj/mm" />
-      <TextField fx:id="libelleaf2" layoutX="96.0" layoutY="341.0" prefHeight="25.0" prefWidth="113.0" />
-      <TextField fx:id="libelleaf3" layoutX="96.0" layoutY="366.0" prefHeight="25.0" prefWidth="113.0" />
-      <TextField fx:id="montantaf2" layoutX="205.0" layoutY="341.0" prefHeight="25.0" prefWidth="94.0" />
-      <TextField fx:id="montantaf3" layoutX="205.0" layoutY="366.0" prefHeight="25.0" prefWidth="94.0" />
-      <Button fx:id="Soumettre" layoutX="89.0" layoutY="472.0" mnemonicParsing="false" onAction="#Inserts" prefHeight="25.0" prefWidth="128.0" text="Signer et Soumettre" />
+      <TextField fx:id="dateaf1" alignment="TOP_CENTER" layoutX="-2.0" layoutY="316.0" prefHeight="25.0" prefWidth="70.0" promptText="jj/mm" />
+      <TextField fx:id="libelleaf1" alignment="TOP_CENTER" layoutX="67.0" layoutY="316.0" prefHeight="25.0" prefWidth="164.0" promptText="Nom de la depence" />
+      <TextField fx:id="montantaf1" alignment="TOP_CENTER" layoutX="229.0" layoutY="316.0" prefHeight="25.0" prefWidth="70.0" promptText="00,00€" />
+      <Button fx:id="Soumettre" layoutX="86.0" layoutY="526.0" mnemonicParsing="false" onAction="#Inserts" prefHeight="25.0" prefWidth="128.0" text="Signer et Soumettre" />
       <Button fx:id="BackButton" layoutX="15.0" layoutY="560.0" mnemonicParsing="false" onAction="#GoBack" text="Revenir en arrière" />
-      <Label fx:id="ttNuitee" layoutX="221.0" layoutY="167.0" prefHeight="17.0" prefWidth="70.0" textAlignment="CENTER">
+      <Label fx:id="ttNuitee" alignment="CENTER_RIGHT" layoutX="221.0" layoutY="167.0" prefHeight="17.0" prefWidth="60.0" textAlignment="CENTER">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font></Label>
-      <Label fx:id="ttRepas" layoutX="221.0" layoutY="192.0" prefHeight="17.0" prefWidth="70.0">
+      <Label fx:id="ttRepas" alignment="CENTER_RIGHT" layoutX="221.0" layoutY="192.0" prefHeight="17.0" prefWidth="60.0">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font></Label>
-      <Label fx:id="ttKilometrage" layoutX="221.0" layoutY="218.0" prefHeight="17.0" prefWidth="70.0">
+      <Label fx:id="ttKilometrage" alignment="CENTER_RIGHT" layoutX="221.0" layoutY="218.0" prefHeight="17.0" prefWidth="60.0">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font></Label>
@@ -116,7 +111,7 @@
             <Font name="Times New Roman Bold" size="20.0" />
          </font>
       </Label>
-      <Label fx:id="muKilometrage" layoutX="153.0" layoutY="217.0" prefHeight="17.0" prefWidth="41.0" text=" ">
+      <Label fx:id="muKilometrage" alignment="CENTER_RIGHT" layoutX="157.0" layoutY="218.0" prefHeight="17.0" prefWidth="44.0" text=" ">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font></Label>
@@ -129,14 +124,30 @@
          <font>
             <Font name="Times New Roman Bold" size="12.0" />
          </font></Label>
-      <Label layoutX="197.0" layoutY="167.0" prefHeight="17.0" prefWidth="14.0" text="€" />
-      <Label layoutX="197.0" layoutY="192.0" prefHeight="17.0" prefWidth="14.0" text="€" />
-      <Label layoutX="197.0" layoutY="217.0" prefHeight="17.0" prefWidth="14.0" text="€" />
+      <Label alignment="CENTER" layoutX="204.0" layoutY="168.0" prefHeight="17.0" prefWidth="14.0" text="€" />
+      <Label alignment="CENTER" layoutX="204.0" layoutY="193.0" prefHeight="17.0" prefWidth="14.0" text="€" />
+      <Label alignment="CENTER" layoutX="204.0" layoutY="218.0" prefHeight="17.0" prefWidth="14.0" text="€" />
       <Label fx:id="Enregistre" alignment="CENTER" layoutX="5.0" layoutY="426.0" prefHeight="26.0" prefWidth="299.0">
          <font>
             <Font name="Times New Roman Italic" size="12.0" />
          </font>
       </Label>
-      <Button fx:id="ValiderAF" layoutX="87.0" layoutY="401.0" mnemonicParsing="false" onAction="#ValiderAF" text="Valider les Autres Frais" />
+      <Button fx:id="ValiderAF" layoutX="82.0" layoutY="346.0" mnemonicParsing="false" onAction="#ValiderAF" text="Valider les Autres Frais" />
+      <TableView layoutX="10.0" layoutY="377.0" prefHeight="140.0" prefWidth="276.0">
+        <columns>
+          <TableColumn prefWidth="75.0" text="Date" />
+          <TableColumn prefWidth="75.0" text="Libellé" />
+            <TableColumn prefWidth="75.0" text="Montant" />
+            <TableColumn prefWidth="50.0" text="Suppr." />
+        </columns>
+      </TableView>
+      <Label alignment="CENTER" layoutX="28.0" layoutY="145.0" prefHeight="17.0" prefWidth="44.0" text="Libellé" wrapText="true">
+         <font>
+            <Font name="Times New Roman" size="12.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER" layoutX="283.0" layoutY="167.0" prefHeight="17.0" prefWidth="14.0" text="€" />
+      <Label alignment="CENTER" layoutX="283.0" layoutY="192.0" prefHeight="17.0" prefWidth="14.0" text="€" />
+      <Label alignment="CENTER" layoutX="283.0" layoutY="218.0" prefHeight="17.0" prefWidth="14.0" text="€" />
    </children>
 </AnchorPane>
