--- a/demo/src/main/resources/fr/projet_ap/Validation.fxml
+++ b/demo/src/main/resources/fr/projet_ap/Validation.fxml
@@ -33,7 +33,6 @@
 -->
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
@@ -61,13 +60,6 @@
             <Font name="Times New Roman" size="14.0" />
          </font>
       </Label>
-      <Label fx:id="AutreLibelle2" layoutX="64.0" layoutY="398.0" prefHeight="26.0" prefWidth="94.0" />
-      <Label fx:id="AutreMontant2" layoutX="158.0" layoutY="398.0" prefHeight="26.0" prefWidth="72.0" />
-      <Label fx:id="AutreDate3" layoutX="1.0" layoutY="424.0" prefHeight="26.0" prefWidth="62.0" />
-      <Label fx:id="AutreLibelle2" layoutX="64.0" layoutY="424.0" prefHeight="26.0" prefWidth="94.0" />
-      <Label fx:id="AutreMontant3" layoutX="158.0" layoutY="424.0" prefHeight="26.0" prefWidth="72.0" />
-      <Separator layoutY="423.0" prefHeight="3.0" prefWidth="299.0" />
-      <Separator layoutX="1.0" layoutY="449.0" prefHeight="3.0" prefWidth="299.0" />
       <Label layoutX="7.0" layoutY="233.0" prefHeight="14.0" prefWidth="87.0" text="Frais Forfaitaires">
          <font>
             <Font name="Times New Roman" size="12.0" />
@@ -126,23 +118,7 @@
             <Font name="Times New Roman Bold Italic" size="12.0" />
          </font>
       </Label>
-      <Label layoutX="19.0" layoutY="357.0" text="Date">
-         <font>
-            <Font name="Times New Roman" size="12.0" />
-         </font>
-      </Label>
-      <Separator layoutX="-1.0" layoutY="372.0" prefHeight="3.0" prefWidth="299.0" />
-      <Label layoutX="93.0" layoutY="356.0" prefHeight="18.0" prefWidth="34.0" text="Libellé">
-         <font>
-            <Font name="Times New Roman" size="12.0" />
-         </font>
-      </Label>
-      <Label layoutX="175.0" layoutY="358.0" text="Montant">
-         <font>
-            <Font name="Times New Roman" size="12.0" />
-         </font>
-      </Label>
-      <Button layoutX="163.0" layoutY="172.0" mnemonicParsing="false" onAction="#valider" prefHeight="35.0" prefWidth="134.0" text="Valider" />
+      <Button layoutX="87.0" layoutY="505.0" mnemonicParsing="false" onAction="#valider" prefHeight="35.0" prefWidth="134.0" text="Valider" />
       <Button layoutX="17.0" layoutY="560.0" mnemonicParsing="false" onAction="#RetourClient" text="Revenir en arrière" />
       <Button layoutX="74.0" layoutY="108.0" mnemonicParsing="false" onAction="#Generer_ff" prefHeight="30.0" prefWidth="148.0" text="Générer Fiche de frais">
          <font>
@@ -179,27 +155,7 @@
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font></Label>
-      <Label fx:id="AutreDate1" alignment="CENTER" layoutX="1.0" layoutY="371.0" prefHeight="26.0" prefWidth="62.0" />
-      <Label fx:id="AutreLibelle1" alignment="CENTER" layoutX="64.0" layoutY="371.0" prefHeight="26.0" prefWidth="94.0" />
-      <Label fx:id="AutreMontant1" alignment="CENTER" layoutX="158.0" layoutY="372.0" prefHeight="26.0" prefWidth="72.0" />
-      <Label fx:id="AutreDate2" alignment="CENTER" layoutX="1.0" layoutY="398.0" prefHeight="26.0" prefWidth="62.0" />
-      <Label fx:id="AutreLibelle2" alignment="CENTER" layoutX="64.0" layoutY="398.0" prefHeight="26.0" prefWidth="94.0" />
-      <Label fx:id="AutreMontant2" alignment="CENTER" layoutX="158.0" layoutY="398.0" prefHeight="26.0" prefWidth="72.0" />
-      <Label fx:id="AutreDate3" alignment="CENTER" layoutX="1.0" layoutY="424.0" prefHeight="26.0" prefWidth="62.0" />
-      <Label fx:id="AutreLibelle3" alignment="CENTER" layoutX="64.0" layoutY="424.0" prefHeight="26.0" prefWidth="94.0" />
-      <Label fx:id="AutreMontant3" alignment="CENTER" layoutX="158.0" layoutY="424.0" prefHeight="26.0" prefWidth="72.0" />
-      <Separator layoutY="423.0" prefHeight="3.0" prefWidth="299.0" />
-      <Separator layoutY="397.0" prefHeight="3.0" prefWidth="299.0" />
-      <Separator layoutX="1.0" layoutY="449.0" prefHeight="3.0" prefWidth="299.0" />
-      <Separator layoutY="354.0" prefHeight="3.0" prefWidth="299.0" />
       <Separator layoutX="296.0" layoutY="221.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
-      <Separator layoutX="62.0" layoutY="373.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
-      <Separator layoutX="156.0" layoutY="373.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
-      <Separator layoutX="229.0" layoutY="373.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
-      <CheckBox fx:id="CheckAf3" layoutX="258.0" layoutY="428.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="17.0" />
-      <CheckBox fx:id="CheckAf2" layoutX="258.0" layoutY="402.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="17.0" />
-      <CheckBox fx:id="CheckAf1" layoutX="258.0" layoutY="376.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="17.0" />
-      <Label layoutX="243.0" layoutY="354.0" prefHeight="18.0" prefWidth="62.0" text="Validation" />
       <Label layoutX="74.0" layoutY="152.0" prefHeight="18.0" prefWidth="148.0" text="Consultation de la fiche de:">
          <font>
             <Font name="System Italic" size="12.0" />
@@ -221,7 +177,6 @@
             <Font name="System Bold Italic" size="12.0" />
          </font>
       </Label>
-      <Button layoutX="158.0" layoutY="460.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="134.0" text="Recharger autres frais" />
       <Label layoutX="145.0" layoutY="551.0" prefHeight="17.0" prefWidth="148.0" text="Connecté(e) en tant que:">
          <font>
             <Font name="System Bold Italic" size="12.0" />
@@ -232,12 +187,12 @@
             <Font name="System Bold Italic" size="12.0" />
          </font>
       </Label>
-      <TableView fx:id="AF" editable="true" layoutX="-1.0" layoutY="449.0" prefHeight="99.0" prefWidth="299.0">
+      <TableView fx:id="AF" editable="true" layoutX="-2.0" layoutY="364.0" prefHeight="141.0" prefWidth="301.0">
         <columns>
-          <TableColumn fx:id="Af_Date" prefWidth="75.0" text="Date" />
-          <TableColumn fx:id="Af_libelle" prefWidth="75.0" text="Libelle" />
-            <TableColumn fx:id="Af_montant" prefWidth="75.0" text="Montant" />
-            <TableColumn fx:id="Af_Validation" minWidth="0.0" prefWidth="73.0" text="Validation" />
+          <TableColumn fx:id="Af_Date" prefWidth="74.0" text="Date" />
+          <TableColumn fx:id="Af_libelle" prefWidth="103.0" text="Libelle" />
+            <TableColumn fx:id="Af_montant" prefWidth="61.0" text="Montant" />
+            <TableColumn fx:id="Af_Validation" minWidth="0.0" prefWidth="62.0" text="Valid." />
         </columns>
       </TableView>
    </children>
