--- a/demo/src/main/resources/fr/projet_ap/Consultation.fxml
+++ b/demo/src/main/resources/fr/projet_ap/Consultation.fxml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -85,7 +85,7 @@
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-      <Label layoutX="20.0" layoutY="106.0" text="Mois :" textFill="#3f6bab">
+      <Label layoutX="20.0" layoutY="107.0" text="Mois :" textFill="#3f6bab">
          <font>
             <Font name="Times New Roman Bold" size="12.0" />
          </font>
@@ -96,13 +96,13 @@
          </font>
       </Label>
       <Button fx:id="BackButton" layoutX="15.0" layoutY="560.0" mnemonicParsing="false" onAction="#GoBack" text="Revenir en arrière" />
-      <Label fx:id="ttNuitee" layoutX="227.0" layoutY="168.0" prefHeight="17.0" prefWidth="56.0" text=" " textAlignment="CENTER" />
-      <Label fx:id="ttRepas" layoutX="226.0" layoutY="193.0" prefHeight="17.0" prefWidth="56.0" textAlignment="CENTER" />
-      <Label fx:id="ttKilometrage" layoutX="226.0" layoutY="218.0" prefHeight="17.0" prefWidth="56.0" textAlignment="CENTER" />
-      <Label fx:id="qunu" layoutX="103.0" layoutY="167.0" prefHeight="17.0" prefWidth="41.0" textAlignment="CENTER" />
-      <Label fx:id="qure" layoutX="103.0" layoutY="192.0" prefHeight="17.0" prefWidth="41.0" textAlignment="CENTER" />
-      <Label fx:id="quki" layoutX="103.0" layoutY="218.0" prefHeight="17.0" prefWidth="41.0" textAlignment="CENTER" />
-      <Label fx:id="prki" layoutX="149.0" layoutY="219.0" prefHeight="17.0" prefWidth="53.0" textAlignment="CENTER" />
+      <Label fx:id="ttNuitee" alignment="CENTER_RIGHT" layoutX="227.0" layoutY="168.0" prefHeight="17.0" prefWidth="56.0" text=" " textAlignment="CENTER" />
+      <Label fx:id="ttRepas" alignment="CENTER_RIGHT" layoutX="226.0" layoutY="193.0" prefHeight="17.0" prefWidth="56.0" textAlignment="CENTER" />
+      <Label fx:id="ttKilometrage" alignment="CENTER_RIGHT" layoutX="226.0" layoutY="218.0" prefHeight="17.0" prefWidth="56.0" textAlignment="CENTER" />
+      <Label fx:id="qunu" alignment="CENTER_RIGHT" layoutX="103.0" layoutY="167.0" prefHeight="17.0" prefWidth="41.0" textAlignment="CENTER" />
+      <Label fx:id="qure" alignment="CENTER_RIGHT" layoutX="103.0" layoutY="192.0" prefHeight="17.0" prefWidth="41.0" textAlignment="CENTER" />
+      <Label fx:id="quki" alignment="CENTER_RIGHT" layoutX="103.0" layoutY="218.0" prefHeight="17.0" prefWidth="41.0" textAlignment="CENTER" />
+      <Label fx:id="prki" alignment="CENTER_RIGHT" layoutX="149.0" layoutY="219.0" prefHeight="17.0" prefWidth="53.0" textAlignment="CENTER" />
       <Label fx:id="matricule" layoutX="152.0" layoutY="43.0" prefHeight="25.0" prefWidth="110.0">
          <font>
             <Font name="Times New Roman Bold" size="12.0" />
@@ -111,22 +111,21 @@
          <font>
             <Font name="Times New Roman Bold Italic" size="12.0" />
          </font></Label>
-      <TextField fx:id="mois" layoutX="60.0" layoutY="101.0" promptText="ex : Janvier" />
-      <Button fx:id="generer" layoutX="217.0" layoutY="101.0" mnemonicParsing="false" onAction="#Generer" text="Generer" />
-      <Label fx:id="prnu" layoutX="150.0" layoutY="168.0" prefHeight="17.0" prefWidth="53.0" text=" " />
-      <Label fx:id="prre" layoutX="149.0" layoutY="193.0" prefHeight="17.0" prefWidth="53.0" text=" " />
+      <Label fx:id="prnu" alignment="TOP_RIGHT" layoutX="150.0" layoutY="168.0" prefHeight="17.0" prefWidth="53.0" text=" " />
+      <Label fx:id="prre" alignment="CENTER_RIGHT" layoutX="149.0" layoutY="193.0" prefHeight="17.0" prefWidth="53.0" text=" " />
       <Label layoutX="206.0" layoutY="168.0" prefHeight="17.0" prefWidth="16.0" text="€" />
       <Label layoutX="206.0" layoutY="193.0" prefHeight="17.0" prefWidth="16.0" text="€" />
       <Label layoutX="206.0" layoutY="219.0" prefHeight="17.0" prefWidth="16.0" text="€" />
       <Label layoutX="284.0" layoutY="168.0" prefHeight="17.0" prefWidth="16.0" text="€" />
       <Label layoutX="283.0" layoutY="193.0" prefHeight="17.0" prefWidth="16.0" text="€" />
       <Label layoutX="283.0" layoutY="218.0" prefHeight="17.0" prefWidth="16.0" text="€" />
-      <TableView layoutX="7.0" layoutY="287.0" prefHeight="247.0" prefWidth="287.0">
+      <TableView fx:id="AF" layoutX="7.0" layoutY="287.0" prefHeight="247.0" prefWidth="287.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="Date" />
-          <TableColumn prefWidth="139.0" text="Libellé" />
-            <TableColumn prefWidth="72.0" text="Montant" />
+          <TableColumn fx:id="Af_Date" prefWidth="75.0" text="Date" />
+          <TableColumn fx:id="Af_libelle" prefWidth="139.0" text="Libellé" />
+            <TableColumn fx:id="Af_montant" prefWidth="72.0" text="Montant" />
         </columns>
       </TableView>
+      <ComboBox fx:id="combobox" layoutX="66.0" layoutY="102.0" onAction="#SelectionnerMois" prefHeight="25.0" prefWidth="156.0" promptText="Mois" />
    </children>
 </AnchorPane>
